--- a/.github/workflows/main_localgoods-frontend.yml
+++ b/.github/workflows/main_localgoods-frontend.yml
@@ -25,7 +25,6 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -53,4 +52,4 @@ jobs:
           app-name: 'localgoods-frontend'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_EA1FCC002FE4477D921DF41D4B27F6BF }}
-          package: .
+          package: ./dist/local-goods
