--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: Fork Sync
-
-on
-
+on:
+  workflow_dispatch
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -13,8 +12,8 @@ jobs:
         # URL of gitHub public upstream repo
         upstream_repo: https://github.com/FortisBs/LocalGoods
           # Branch to merge from upstream (defaults to downstream branch)
-        upstream_branch: # optional, default is main
+        upstream_branch: main # optional, default is main
           # Branch to merge into downstream
-        downstream_branch: # optional, default is 
+        downstream_branch: main # optional, default is 
           # GitHub Bot token
         token: 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
