--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,4 +26,4 @@ steps:
       git remote -v
       git checkout
       git -c http.extraheader="AUTHORIZATION: bearer $(system_accesstoken)" 
-      git push origin
+      git push origin main
