--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,4 +26,5 @@ steps:
       git remote -v
       git checkout
       git branch -m main
-      git push -u https://$(System.AccessToken)@dev.azure.com/EmilGaripov/LocalGoods/_git/LocalGoods-front.git origin master:main
+      git pull --rebase origin main
+      git push -u https://$(System.AccessToken)@dev.azure.com/EmilGaripov/LocalGoods/_git/LocalGoods-front.git origin main
